[gd_scene load_steps=3 format=3 uid="uid://debdm8xqduxxr"]

[ext_resource type="StyleBox" uid="uid://bb047javqgas8" path="res://Scenes/UI_Themes/server_entry_unselected.tres" id="1_70y58"]
[ext_resource type="Script" path="res://Scripts/UI_Components/ServerEntry.gd" id="1_j64xk"]

[node name="ServerEntry" type="PanelContainer"]
offset_top = 360.0
offset_right = 40.0
offset_bottom = 400.0
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_70y58")
script = ExtResource("1_j64xk")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 1

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Server Name"

[node name="PlayersLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "0/8 Players"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
